# balloon-animal

./: README.md  pyproject.toml
balloon_animal/: __init__.py  precompute.py  precompute_utils.py  prepare_full_dataset.py  segmentation.py  tracking.py  tracking_external.py  tracking_utils.py  utils.py  validate.py  visualize.py
src/: base.py  tracking.py  utils.py
