[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "balloon-animal"
version = "0.1.0"
description = "Animal Tracking with Gaussian Splatting Balloons."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Jonathan Wong", email = "jonathan.wong@alleninstitute.org"},
]
dependencies = [
    "numpy>=1.20.0",
    "rerun-sdk>=0.10.0",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["balloon_animal"]