[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "balloon-animal"
version = "0.1.0"
description = "Animal Tracking with Gaussian Splatting Balloons."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Jonathan Wong", email = "jonathan.wong@alleninstitute.org"},
]
dependencies = [
    "numpy>=1.20.0",
    "rerun-sdk>=0.10.0",
    "h5py",
    "huggingface-hub",
    "transformers",
    "opencv-python", 
    "plotly",
    "einops",
    "tensorflow",
    "accelerate",
    "open3d",
    "diff-gaussian-rasterization @ git+https://github.com/JonathonLuiten/diff-gaussian-rasterization-w-depth.git"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["balloon_animal"]

[tool.hatch.metadata]
allow-direct-references = true